updated footer and style radio display block

--- a/wp-content/themes/twentyfifteen/style.css
+++ b/wp-content/themes/twentyfifteen/style.css
@@ -521,7 +521,7 @@ select::-ms-expand{
 }
 
 input[type=checkbox],input[type=radio]{
-	display:none
+	display:block;
 }
 
 .bmg-b-form__textarea::-webkit-input-placeholder{
