--- a/wp-content/themes/twentyfifteen/style.css
+++ b/wp-content/themes/twentyfifteen/style.css
@@ -365,7 +365,8 @@ input[type=color],input[type=date],input[type=datetime],input[type=datetime-loca
 	border-radius:0
 }
 
-input[type=password],input[type=text],textarea{
+input[type=password],input[type=text],input[type=email],input[type=tel],
+textarea{
 	width:100%;
 	padding:1rem;
 	box-sizing:border-box;
